Refactor mine management system and enhance command handling
- Replaced HashMap with ConcurrentHashMap for thread-safe task management.
- Added checks for missing commands in plugin.yml during plugin enable.
- Improved task registration and cancellation methods for mine resets.
- Enhanced Mine class with better null handling and validation for materials.
- Updated MineCMD to improve command execution flow and error handling.
- Refactored GUI handling in MineGUI for better material selection and display.
- Introduced ItemBuilder class for cleaner item creation and manipulation.
- Improved utility methods in Utils for material and sound handling.
- Updated plugin.yml to reflect command structure changes.
- Added VSCode settings for automatic build configuration.